Styles- profile and added user blogs page

--- a/templates/security/password.html.twig
+++ b/templates/security/password.html.twig
@@ -1,13 +1,16 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-
-    <h1>Change Password</h1>
+<div class="flex container mx-auto max-w-fit my-6 mh-auto p-8 bg-gray-200 rounded-md flex-col">
+    <p class="text-xl font-semibold text-center mt-4 items-center">Change Password</p>
 
     {{ form_start(form) }}
-    {{ form_widget(form) }}
+    {{ form_row(form.currentPassword, {'attr': {'class': 'border rounded mt-4 mb-2 px-1', 'placeholder': 'Current Password*'}}) }}
+    {{ form_row(form.plainPassword, {'attr': {'class': 'border rounded my-2 px-1', 'placeholder': 'New Password*'}}) }}
+    {{ form_row(form.confirmPassword, {'attr': {'class': 'border rounded my-2 px-1', 'placeholder': 'Confirm New Password*'}}) }}
 
-    <button type="submit">Change Password</button>
-    <button><a href="{{ path('app_user_show', {'id': app.user.id}) }}">Back to Profile</a></button>
+    <div><button type="submit" class="inline-block w-fit rounded bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white px-4 pb-1.5 pt-2 mt-2 font-sans">Change Password</button></div>
+    <button><a class="inline-block w-fit rounded bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white px-4 pb-1.5 pt-2 mt-2 font-sans" href="{{ path('app_user_show', {'id': app.user.id}) }}">Back to Profile</a></button>
     {{ form_end(form) }}
+</div>
 {% endblock %}
