--- a/templates/blog/_blog_items.html.twig
+++ b/templates/blog/_blog_items.html.twig
@@ -1,8 +1,13 @@
 {% for blog in blogs %}
-    <p><h3><a href="{{ path('app_blog_show', {'id': blog.id}) }}">{{ blog.title }}</a></h3></p>
-    <p>{{ blog.createdAt|date('Y-M-d H:i') }}</p>
-    <p><iframe width="560" height="315" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-    <p>{{ blog.text|nl2br|raw }}</p>
-    <button><a href="{{ path('app_blog_edit', {'id': blog.id}) }}">Edit</a></button>
-    {{ include('blog/_delete_form.html.twig') }}
+     <div class="flex-col blog-item py-4 bg-gray-400 bg-opacity-40 rounded-md mb-6 px-2">
+        <p class="text-2xl ml-2">{{ blog.title }}</p>
+        <p class=" text-s ml-2">{{ blog.createdAt|date('Y-M-d H:i') }}</p>
+        <p><iframe width="750" height="422" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+        <p class="py-0.5 ml-2">Likes: {{ blog.getLikesCount() }} Comments: {{ blog.getCommentsCount() }}</p>
+        <button class="ml-2"><a class="font-sans block w-full h-full bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-1 text-sm font-medium" href="{{ path('app_blog_show', {'id': blog.id}) }}">View</a></button>
+        <button><a class="font-sans block w-full h-full bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-1 text-sm font-medium" href="{{ path('app_blog_edit', {'id': blog.id}) }}">Edit</a></button>
+        <div class="ml-2">
+            {{ include('blog/_delete_form.html.twig') }}
+        </div>
+    </div>
 {% endfor %}
