--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit User{% endblock %}
+{% block title %}Edit Profile{% endblock %}
 
 {% block body %}
-    <h1>Edit User</h1>
+<div class="flex flex-col mx-auto max-w-fit my-6 mh-auto p-8 bg-gray-200 rounded-md">
+    <p class="text-xl font-semibold text-center mt-4 items-center">Edit Profile</p>
 
     {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_user_show', {'id': app.user.id}) }}">Back to Profile</a>
-
-    {{ include('user/_delete_form.html.twig') }}
+    <button><a class="block w-fit rounded bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white px-4 pb-1.5 pt-2 mt-2 font-sans" href="{{ path('app_user_show', {'id': app.user.id}) }}">Back to Profile</a></button>
+</div>
 {% endblock %}
