--- a/templates/error/access_denied.html.twig
+++ b/templates/error/access_denied.html.twig
@@ -1,9 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Access Denied{% endblock %}
+{% block title %}403{% endblock %}
 
 {% block body %}
-    <h1>Access Denied</h1>
+<div class="flex flex-col">
+    <p class="text-xl">Access Denied</p>
     <p>You do not have permission to access this resource.</p>
-    <button><a href="{{ path('home') }}">Return Home</a></button>
+</div>
 {% endblock %}
