fixed admin notification to show words

--- a/templates/admin/_blog_items.html.twig
+++ b/templates/admin/_blog_items.html.twig
@@ -1,12 +1,16 @@
 {% for blog in blogs %}
-    <h2>{{ blog.title }}</h2>
-    <p>{{ blog.createdAt|date('Y-M-d') }} Created By: {{ blog.createdBy }}
-    {% if (blog.edited)%}
-        (Edited: {{ blog.editedAt|date('d-M-Y') }})
-    {% endif %}
-    <iframe width="450" height="253" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <p>{{ blog.text}}</p>
-    <button><a href="{{ path('app_blog_show', {'id': blog.id}) }}">View Blog</a></button>
-    <button><a href="{{ path('app_blog_edit', {'id': blog.id}) }}">Edit</a></button>
-    {{ include('admin/blog_delete_form.html.twig') }}
+    <div class="flex-col blog-item py-4 bg-gray-400 bg-opacity-40 rounded-md mb-6 px-2">
+            <p class="text-2xl ml-2">{{ blog.title }}</p>
+            <p class=" text-s ml-2">{{ blog.createdAt|date('Y-M-d H:i') }} Created By: {{ blog.createdBy }}
+            {% if (blog.edited)%}
+            (Edited: {{ blog.editedAt|date('d-M-Y') }})
+            {% endif %}</p>
+            <p><iframe width="750" height="422" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+            <p class="py-0.5 ml-2">Likes: {{ blog.getLikesCount() }} Comments: {{ blog.getCommentsCount() }}</p>
+            <button class="ml-2"><a class="font-sans block w-full h-full bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-1 text-sm font-medium" href="{{ path('app_blog_show', {'id': blog.id}) }}">View</a></button>
+            <button><a class="font-sans block w-full h-full bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-1 text-sm font-medium" href="{{ path('app_blog_edit', {'id': blog.id}) }}">Edit</a></button>
+            <div class="ml-2">
+                {{ include('blog/_delete_form.html.twig') }}
+            </div>
+            </div>
 {% endfor %}
