--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,8 +4,10 @@
 
 {% block body %}
 <main>
-<section class="flex flex-col bg-white bg-opacity-60 w-fit px-6 rounded-md mx-auto">
+<section>
+<div class="flex flex-col bg-white bg-opacity-60 w-fit px-6 rounded-md mx-auto">
     <p class="text-4xl mx-auto mt-2">Latest Blogs</p>
+    <input type="text" class="border rounded ml-2 px-1 my-3" id="searchInput" placeholder="Search blogs...">
     <div id="blog-container">
         {% for blog in blogs %}
             <div class="flex-col blog-item py-4 bg-gray-400 bg-opacity-40 rounded-md mb-6 px-2">
@@ -22,6 +24,7 @@
         {% endfor %}
     </div>
     <div id="pagination-loader" data-offset="7"></div>
+</div>
 </section>
 </main>
 <script>
