--- a/templates/comments/edit.html.twig
+++ b/templates/comments/edit.html.twig
@@ -3,11 +3,14 @@
 {% block title %}Edit Comments{% endblock %}
 
 {% block body %}
-    <h1>Edit Comments</h1>
-
+<div class="flex flex-col justify-center container mx-auto w-1/4 h-fit my-6 mh-auto p-8 bg-gray-200 rounded-md">
+    <p class="text-center text-2xl font-semibold mb-2">Edit Comments</p>
+    <div class="w-full">
     {{ include('comments/_form.html.twig', {'button_label': 'Save'}) }}
-
+    </div>
     <a href="{{ path('app_blog_show', {'id': comment.blog.id}) }}">Back to blog</a>
 
     {{ include('comments/_delete_form.html.twig') }}
+</div>
+
 {% endblock %}
