removed script var in twig

--- a/templates/blog/myBlogs.html.twig
+++ b/templates/blog/myBlogs.html.twig
@@ -22,9 +22,7 @@
         {% endfor %}
         </div>
         <div id="pagination-loader" data-offset="7"></div>
+        <div id="url" data-url="{{ url }}" style="display: none;"></div>
     </section>
 </main>
-<script>
-    var page = 'myBlogs';
-</script>
 {% endblock %}
