--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -24,10 +24,8 @@
         {% endfor %}
     </div>
     <div id="pagination-loader" data-offset="7"></div>
+    <div id="url" data-url="{{ url }}" style="display: none;"></div>
 </div>
 </section>
 </main>
-<script>
-    var page = 'home';
-</script>
 {% endblock %}
