--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -7,7 +7,14 @@
 <section>
 <div class="flex flex-col bg-white bg-opacity-60 w-fit px-6 rounded-md mx-auto">
     <p class="text-4xl mx-auto mt-2">Latest Blogs</p>
+    <select id="categoryFilter" class="border rounded ml-2 px-1 my-3">
+        <option value="" selected>Filter</option>
+        {% for category in categories %}
+            <option value="{{ category.id }}">{{ category.getCategory() }}</option>
+        {% endfor %}
+    </select>
     <input type="text" class="border rounded ml-2 px-1 my-3" id="searchInput" placeholder="Search blogs...">
+    
     <div id="blog-container">
         {% for blog in blogs %}
             <div class="flex-col blog-item py-4 bg-gray-400 bg-opacity-40 rounded-md mb-6 px-2">
