--- a/templates/home/categoryIndex.html.twig
+++ b/templates/home/categoryIndex.html.twig
@@ -6,13 +6,14 @@
 <main>
 <section>
 <div class="flex flex-col bg-white bg-opacity-60 w-fit px-6 rounded-md mx-auto">
-    <p class="text-4xl mx-auto mt-2">Latest Blogs</p><select id="categoryFilter" class="border rounded ml-2 px-1 my-3">
-        <option value="" selected>View Categories...</option>
+    <p class="text-4xl mx-auto mt-2">Latest Blogs</p>
+    <select id="categoryFilter" class="border rounded ml-2 px-1 my-3">
+        <option value="" selected>{{ category }}</option>
         {% for category in categories %}
             <option value={{ category.id }}>{{ category.getCategory() }}</option>
         {% endfor %}
     </select>
-    <input type="text" class="border rounded ml-2 px-1 my-3" id="searchInput" placeholder="Search blogs...">
+    <input type="text" class="border rounded ml-2 px-1 my-3" id="searchCatInput" placeholder="Search blogs...">
     
     <div id="blog-container">
         {% for blog in blogs %}
@@ -31,6 +32,7 @@
     </div>
     <div id="pagination-loader" data-offset="7"></div>
     <div id="url" data-url="{{ url }}" style="display: none;"></div>
+    <div id="id" data-id="{{ id }}" style="display: none;"></div>
 </div>
 </section>
 </main>
