--- a/templates/script.html.twig
+++ b/templates/script.html.twig
@@ -1,4 +1,4 @@
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-<script src="{{ asset('js/pagination.js') }}"></script>
+<script src="{{ asset('js/main.js') }}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.6/purify.min.js"></script>
 <script src="https://cdn.tailwindcss.com"></script>
