--- a/templates/comments/_delete_form.html.twig
+++ b/templates/comments/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('app_comments_delete', {'id': comment.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ comment.id) }}">
-    <button class="btn font-sans block w-fit h-full bg-red-600 text-gray-200 hover:bg-red-500 hover:text-white rounded-md px-2.5 py-1 mt-1 ml-4 text-sm font-medium">Delete</button>
+    <button class="btn">Delete</button>
 </form>
