--- a/templates/comments/show.html.twig
+++ b/templates/comments/show.html.twig
@@ -17,7 +17,9 @@
             {% if app.user == comment.getCreatedBy() %}
             <div class="flex flex-row">
             <button><a class="font-sans block w-fit h-full bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white rounded-md px-2.5 py-1 mt-1 text-sm font-medium" href="{{ path('app_comments_edit', {'id': comment.id}) }}">Edit</a></button>
+            <div class="block w-fit h-full bg-red-600 text-gray-200 hover:bg-red-500 hover:text-white rounded-md px-2.5 py-1 mt-1 ml-4 text-sm font-medium">
             {{ include('comments/_delete_form.html.twig') }}
+            </div>
             </div>
             {% endif %}</div>
         </div>
