--- a/templates/blog/_form.html.twig
+++ b/templates/blog/_form.html.twig
@@ -1,5 +1,6 @@
 {{ form_start(form) }}
     {{ form_row(form.title, {'attr': {'class': 'w-1/3 border rounded mt-2 mb-5 px-1 h-10', 'placeholder': 'Blog Title*'}}) }}
+    {{ form_row(form.category, {'attr': {'class': 'w-1/3 border rounded mt-2 mb-5 px-1 h-10'}}) }}
     {{ form_row(form.videoUrl, {'attr': {'class': 'w-1/3 border rounded mt-2 mb-5 px-1 h-10', 'placeholder': 'Video URL* Please copy just the embed code /embed/...'}}) }}
     {{ form_row(form.text, {'attr': {'class': 'h-80 w-full border rounded mt-2 mb-5 px-1', 'placeholder': 'Text*
 Please follow this layout:
