--- a/templates/admin/blacklist.html.twig
+++ b/templates/admin/blacklist.html.twig
@@ -3,9 +3,10 @@
 {% block title %}Blacklist index{% endblock %}
 
 {% block body %}
-    <h1>Blacklist index</h1>
+    <p class="text-2xl font-semibold">Blacklist index</p>
 
-    <table class="table-auto border-separate border border-slate-400 rounded-lg">
+    <button><a class="block w-fit rounded bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white px-4 pb-1.5 pt-2 ml-2 mt-2" href="{{ path('app_admin_blacklist_new') }}">Add more</a></button>
+    <table class="table-auto border-separate border border-slate-400 rounded-lg mx-2 mt-4">
     <div class="flex flex-row">
         <thead>
             <tr>
@@ -17,9 +18,9 @@
         <tbody>
         {% for blacklist in blacklists %}
             <tr>
-                <td class="border border-slate-300 basis-1/2">{{ blacklist.emailAddress }}</td>
-                <td class="border border-slate-300 basis-1/4">{{ blacklist.createdAt ? blacklist.createdAt|date('Y-m-d H:i') : '' }}</td>
-                <td class="border border-slate-300 basis-1/4">
+                <td class="border border-slate-300 basis-1/2 text-xl">{{ blacklist.emailAddress }}</td>
+                <td class="border border-slate-300 basis-1/4 text-xl">{{ blacklist.createdAt ? blacklist.createdAt|date('Y-m-d H:i') : '' }}</td>
+                <td class="border border-slate-300 basis-1/4 text-xl">
                 {{ include('admin/blacklist_delete_form.html.twig') }}
                 </td>
             </tr>
@@ -32,5 +33,4 @@
     </div>
     </table>
 
-    <a href="{{ path('app_admin_blacklist_new') }}">Create new</a>
 {% endblock %}
