--- a/templates/admin/comment.html.twig
+++ b/templates/admin/comment.html.twig
@@ -3,22 +3,24 @@
 {% block title %}Comment{% endblock %}
 
 {% block body %}
-    <h1>Comment</h1>
+<div class="flex flex-col mx-auto w-1/4 my-6 mh-auto p-8 bg-gray-200 rounded-md">
+   <p class="text-2xl font-semibold ml-2">Comment</p>
 
-    <table class="table">
+    <table class="table border-separate border border-slate-400 rounded-lg mx-2 mt-4">
         <tbody>
             <tr>
-                <th>user</th>
+                <th class="border border-slate-300">User</th>
                 <td>{{ comment.createdBy }}</td>
             </tr>
             <tr>
-                <th>Words</th>
+                <th class="border border-slate-300">Word/s</th>
                 <td>{{ comment.text }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('app_admin_notifications') }}">back to notifications</a>
+    <button><a class="block w-fit rounded bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white px-4 py-1 ml-2 my-2" href="{{ path('app_admin_notifications') }}">back to notifications</a></button>
 
     {{ include('admin/comment_delete_form.html.twig') }}
+</div>
 {% endblock %}
