--- a/templates/admin/comments.html.twig
+++ b/templates/admin/comments.html.twig
@@ -3,28 +3,28 @@
 {% block title %}Comments index{% endblock %}
 
 {% block body %}
-    <h1>Comments index</h1>
+    <p class="text-2xl font-semibold ml-4">Comments</p>
 
-    <table class="table">
+    <table class="table border-separate border border-slate-400 rounded-lg mx-4 mt-4">
         <thead>
             <tr>
-                <th>CreatedAt</th>
-                <th>User</th>
-                <th>Comment</th>
-                <th>Edited</th>
-                <th>EditedAt</th>
-                <th>actions</th>
+                <th class="border border-slate-300">CreatedAt</th>
+                <th class="border border-slate-300">User</th>
+                <th class="border border-slate-300">Comment</th>
+                <th class="border border-slate-300">Edited</th>
+                <th class="border border-slate-300 w-fit">EditedAt</th>
+                <th class="border border-slate-300">actions</th>
             </tr>
         </thead>
         <tbody>
         {% for comment in comments %}
             <tr>
-                <td>{{ comment.createdAt ? comment.createdAt|date('Y-m-d H:i') : '' }}</td>
-                <td>{{ comment.createdBy }}</td>
-                <td>{{ comment.text }}</td>
-                <td>{{ comment.edited ? 'Yes' : 'No' }}</td>
-                <td>{{ comment.editedAt ? comment.editedAt|date('Y-m-d H:i') : '' }}</td>
-                <td>
+                <td class="border border-slate-300 text-xl">{{ comment.createdAt ? comment.createdAt|date('Y-m-d H:i') : '' }}</td>
+                <td class="border border-slate-300 text-xl">{{ comment.createdBy }}</td>
+                <td class="border border-slate-300 text-xl">{{ comment.text }}</td>
+                <td class="border border-slate-300 text-xl">{{ comment.edited ? 'Yes' : 'No' }}</td>
+                <td class="border border-slate-300 text-xl">{{ comment.editedAt ? comment.editedAt|date('Y-m-d H:i') : '' }}</td>
+                <td class="border border-slate-300 text-xl">
                     {{ include('admin/comment_delete_form.html.twig') }}
                 </td>
             </tr>
