--- a/templates/admin/forbidden_form.html.twig
+++ b/templates/admin/forbidden_form.html.twig
@@ -1,4 +1,4 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    {{ form_row(form.words, {'attr': {'class': 'border w-full rounded my-2 px-1', 'placeholder': 'Add multiple by separating with a ","'}}) }}
+    <button class="btn inline-block rounded bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white mt-6 px-3 pb-1.5 pt-1.5">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
