--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,3 +1,5 @@
+<footer>
 <div class="fixed inset-x-0 bottom-0 z-50 grid min-w-full place-items-center align-middle h-8 bg-gray-800 text-white font-sans">
     <p>&copy; {{ 'now'|date('Y') }} Why not DIY!</p>
 </div>
+</footer>
