--- a/templates/admin/blogs.html.twig
+++ b/templates/admin/blogs.html.twig
@@ -19,7 +19,7 @@
             <button class="ml-2"><a class="font-sans block w-full h-full bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-1 text-sm font-medium" href="{{ path('app_blog_show', {'id': blog.id}) }}">View</a></button>
             <button><a class="font-sans block w-full h-full bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-1 text-sm font-medium" href="{{ path('app_blog_edit', {'id': blog.id}) }}">Edit</a></button>
             <div class="ml-2">
-                {{ include('blog/_delete_form.html.twig') }}
+                {{ include('admin/blog_delete_form.html.twig') }}
             </div>
             </div>
         {% endfor %}
